# datasette-syntaqlite

./: README.md  pyproject.toml
.github/workflows/: test.yml
datasette_syntaqlite/: __init__.py
datasette_syntaqlite/static/: syntaqlite-lint.css  syntaqlite-lint.js
tests/: test_syntaqlite.py
