[project]
name = "datasette-syntaqlite"
version = "0.1"
description = "Lint Datasette queries with Syntaqlite"
readme = "README.md"
authors = [{name = "Théophile Cantelobre"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette",
    "pydantic>=2.12.5",
    "syntaqlite>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/theophilec/datasette-syntaqlite"
Changelog = "https://github.com/theophilec/datasette-syntaqlite/releases"
Issues = "https://github.com/theophilec/datasette-syntaqlite/issues"
CI = "https://github.com/theophilec/datasette-syntaqlite/actions"

[project.entry-points.datasette]
syntaqlite = "datasette_syntaqlite"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_syntaqlite = ["static/*"]
